--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             This is my favorite restaurant. It's called DUCKFAT and you can find it in Portland, ME. They fry all their fried menu items in duck fat and make dishes like loaded fries, poutine, and doughnut holes.
         </p>
 
-        <img src="imgs/duckfat.jpg" align="left" alt="Duck Poutine topped with Fried Egg">
+        <img src="duckfat.jpg" align="left" alt="Duck Poutine topped with Fried Egg">
         <p>This is duck fat poutine that has been topped with a fried egg.</p>
         <br>
         <p>This is a dish you can get at DUCKFAT.</p>
@@ -39,25 +39,25 @@
             </tr>
             <tr>
                 <td>Warriors: Into the Wild</td>
-                <td><img src="imgs/warriors-into-the-wild.jpg"></td>
+                <td><img src="warriors-into-the-wild.jpg"></td>
                 <td>Erin Hunter</td>
                 <td>The story of a cat who discovers an unknown world beyond the fence of his owner's backyard and decides to leave the comfortable house pet life to join a clan of wild cats.</td>
             </tr>
             <tr>
                 <td>The Underground Railroad</td>
-                <td><img src="imgs/urr.jpg"></td>
+                <td><img src="urr.jpg"></td>
                 <td>Colson Whitehead</td>
                 <td>A reimagination of the historical Underground Railroad as a literal network of secret tunnels and trains, following the harrowing journey of a young enslaved woman named Cora towards freedom.</td>
             </tr>
             <tr>
                 <td>Lord of the Flies</td>
-                <td><img src="imgs/lotf.jpg"></td>
+                <td><img src="lotf.jpg"></td>
                 <td>William Golding</td>
                 <td>An exploration of the descent into chaos and savagery of a group of British boys stranded on a deserted island.</td>
             </tr>
             <tr>
                 <td>No, David!</td>
-                <td><img src="imgs/nodavid.jpg"></td>
+                <td><img src="nodavid.jpg"></td>
                 <td>David Shannon</td>
                 <td>A children's book that humorously depicts the misadventures of a young boy named David as he continually breaks the rules and tests his mother's patience.</td>
             </tr>
